bug squash: vantaNet, footer, header

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,7 @@
 }
 
 #vantaNet {
-  position: absolute;
+  position: relative;
   display: block;
   min-width: 100%;
   min-height: 100%;
@@ -57,14 +57,13 @@ header {
     transform-origin: bottom left; }
   
   #infoicon {
+    padding-top: 5px;
     opacity: 0;
     position: relative;
-    cursor: pointer;
     color: white;
     transition: 0.2s; }
   
   #infoicon:hover {
-    position: relative;
     cursor: pointer;
     color: orange; }
 }
@@ -107,7 +106,7 @@ header {
     width: 55%;
   
   #intro span {
-    color: orange;
+    color: #EE964B;
     font-size: 1.2em; }
   
   #greeting {
@@ -167,7 +166,7 @@ header {
   
 footer {
   text-align: right;
-  font-size: 0.2em;
+  font-size: 0.5em;
   position: absolute;
   left: 0;
   bottom: 0;
